--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/apple-pie.html">Apple pie</a></p>
-    <p><a href="recipes/lasagna.html">Lasagna</a></p>
-    <p><a href="recipes/meatballs.html">MeatBalls</a></p>
+    <ul>
+        <il><a href="recipes/lasagna.html">Lasagna</a></il>
+        <il><a href="recipes/meatballs.html">MeatBalls</a></il>
+        <il><a href="recipes/apple-pie.html">Apple pie</a></il>
+    </ul>
 </body>
 </html>
