--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -1,1 +1,30 @@
 <h1>Meatballs</h1>
+<img src="https://www.allrecipes.com/thmb/Kpim0JidNGOZXMKND8lraX9WXlk=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1Maple-Mustard-Meatballs-e5507735b44a4a6ba37190b85bcff6ea.jpg" alt="a photo of meatballs">
+<p>These easy to make meatballs are baked in a sweet and tangy maple syrup and mustard sauce. Serve over rice, noodles, or mashed potatoes for a stress-free weekday meal. A great option for potlucks too!</p>
+<h2>Ingredients</h2>
+<ul>
+    <li>
+        <li>½ pound ground beef</li>
+        <li>¼ cup rolled oats</li>
+        <li>¼ cup milk</li>
+        <li>1 large egg, lightly beaten</li>
+        <li>¾ teaspoon salt</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>⅛ teaspoon ground black pepper</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 small onion, diced</li>
+        <li>½ pound ground pork</li>
+    </li>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Combine ground pork, ground beef, oats, milk, egg, salt, garlic powder, and pepper in a large bowl. Shape into 24 meatballs, about 1 1/2 inches in diameter.</li>
+        <li>Heat oil in a large skillet over medium heat. Cook meatballs until evenly browned, about 8 to 10 minutes. Place meatballs into an 8x8-inch casserole dish and scatter onion over top.</li>
+        <li>Combine maple syrup, mustard, ketchup, hot pepper sauce, and salt for sauce in a medium bowl. Pour over meatballs and toss to coat.</li>
+        <li>Bake in the preheated oven until set and cooked through, about 30 minutes, stirring halfway through. </li>
+    </ol>
+</ul><h2>Other Recipes</h2>
+<ul>
+    <li><a href="apple-pie.html">Apple Pie</a></li>
+    <li><a href="lasagna.html">Lasagna</a></li>
+</ul>
