--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <il><a href="recipes/lasagna.html">Lasagna</a></il>
-        <il><a href="recipes/meatballs.html">MeatBalls</a></il>
-        <il><a href="recipes/apple-pie.html">Apple pie</a></il>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/meatballs.html">MeatBalls</a></li>
+        <li><a href="recipes/apple-pie.html">Apple pie</a></li>
     </ul>
 </body>
 </html>
