--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -1,5 +1,5 @@
 <h1>Meatballs</h1>
-<img src="https://www.allrecipes.com/thmb/Kpim0JidNGOZXMKND8lraX9WXlk=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1Maple-Mustard-Meatballs-e5507735b44a4a6ba37190b85bcff6ea.jpg" alt="a photo of meatballs">
+<img src="https://www.allrecipes.com/thmb/Kpim0JidNGOZXMKND8lraX9WXlk=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1Maple-Mustard-Meatballs-e5507735b44a4a6ba37190b85bcff6ea.jpg" alt="a photo of meatballs" width="150">
 <p>These easy to make meatballs are baked in a sweet and tangy maple syrup and mustard sauce. Serve over rice, noodles, or mashed potatoes for a stress-free weekday meal. A great option for potlucks too!</p>
 <h2>Ingredients</h2>
 <ul>
@@ -28,3 +28,4 @@
     <li><a href="apple-pie.html">Apple Pie</a></li>
     <li><a href="lasagna.html">Lasagna</a></li>
 </ul>
+<a href="../index.html">Back to the home page</a>
