--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -1,26 +1,27 @@
 <h1>Apple Pie</h1>
-<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://images.media-allrecipes.com/userphotos/9129369.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="a photo of an apple pie">
+<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https://images.media-allrecipes.com/userphotos/9129369.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="a photo of an apple pie" width="150">
 <p>This salted caramel apple pie has everything you'd want out of an apple pie: a buttery, flaky crust; a spiced apple filling; and a sweet, salty caramel sauce that team up to provide a perfect combination of flavors and textures in every bite. Serve à la mode with a side of vanilla bean ice cream.</p>
 <h2>Ingredients</h2>
 <ul>
-    <li>
+    
         <li>For the crust: all-purpose flour, kosher salt, unsalted butter, and water</li>
         <li>For the sauce: white sugar, salted butter, heavy whipping cream, and fine sea salt</li>
         <li>For the filling: Granny Smith apples, white sugar, all-purpose flour, lemon juice, cinnamon, kosher salt, ground cloves, and nutmeg</li>
         <li>For the topping: one egg and turbinado sugar </li>
-    </li>
+    
 </ul>
 <h2>Steps</h2>
 <ol>
-    <il>Make the dough: Whisk the flour and salt, then work in the butter. Stir in the water. Transfer the dough to a work surface and knead until it's smooth. Divide the dough into two discs, wrap in storage wrap, and chill each half in plastic wrap.</il>
-    <il>Make the sauce: Heat the sugar until it's melted and amber in color. Add the butter, then add the cream. Remove from the heat and add the salt. Let cool.</il>
-    <il>Make the filling: Stir the filling ingredients until well-combined. Let it sit for about 30 minutes, then pour it through a strainer into a large bowl. Thicken the liquid on the stove. Allow the liquid to cool to room temperature, then stir it into the apple mixture.</il>
-    <il>Roll the dough: Turn each dough disc out onto a lightly floured surface. Roll them out into 12-inch circles.</il>
-    <il>Assemble the pie: Press one of the dough halves into a pie pan. Add the filling, then top with ½ of the caramel sauce. Place the remaining dough circle over top and crimp the edge. Brush the top with a beaten egg, sprinkle with turbinado sugar, and cut slits into the dough with a sharp knife.</il>
-    <il>Bake the pie: Place the pie on a baking sheet. Bake at 400 degrees F until the top is light golden brown, then reduce the heat to 375 degrees and continue baking until the top is a deep golden brown. Serve with the remaining caramel sauce. </il>
+    <li>Make the dough: Whisk the flour and salt, then work in the butter. Stir in the water. Transfer the dough to a work surface and knead until it's smooth. Divide the dough into two discs, wrap in storage wrap, and chill each half in plastic wrap.</li>
+    <li>Make the sauce: Heat the sugar until it's melted and amber in color. Add the butter, then add the cream. Remove from the heat and add the salt. Let cool.</li>
+    <li>Make the filling: Stir the filling ingredients until well-combined. Let it sit for about 30 minutes, then pour it through a strainer into a large bowl. Thicken the liquid on the stove. Allow the liquid to cool to room temperature, then stir it into the apple mixture.</li>
+    <li>Roll the dough: Turn each dough disc out onto a lightly floured surface. Roll them out into 12-inch circles.</li>
+    <li>Assemble the pie: Press one of the dough halves into a pie pan. Add the filling, then top with ½ of the caramel sauce. Place the remaining dough circle over top and crimp the edge. Brush the top with a beaten egg, sprinkle with turbinado sugar, and cut slits into the dough with a sharp knife.</li>
+    <li>Bake the pie: Place the pie on a baking sheet. Bake at 400 degrees F until the top is light golden brown, then reduce the heat to 375 degrees and continue baking until the top is a deep golden brown. Serve with the remaining caramel sauce. </li>
 </ol>
 <h2>Other Recipes</h2>
 <ul>
     <li><a href="lasagna.html">Lasagna</a></li>
     <li><a href="meatballs.html">Meatballs</a></li>
 </ul>
+<a href="../index.html">Back to the home page</a>
